--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 [Ll]ibrary/
 [Tt]emp/
 [Oo]bj/
+[Bb]uild/
+[Bb]uilds/
 Assets/AssetStoreTools*
 
 # Visual Studio cache directory
@@ -32,10 +34,3 @@ sysinfo.txt
 # Builds
 *.apk
 *.unitypackage
-
-# FMOD
-Assets/Plugins/FMOD/Resources/FMODStudioCache.asset
-Assets/Plugins/FMOD/Resources/FMODStudioCache.asset.meta
-Assets/StreamingAssets/**/*.bank
-Assets/StreamingAssets/**/*.bank.meta
-fmod_editor.log
