Fixed animator code for throw, added melee combat implementation (still needs to be tweaked).

--- a/Proof of Concept_0.1.5/Assembly-CSharp.csproj
+++ b/Proof of Concept_0.1.5/Assembly-CSharp.csproj
@@ -85,6 +85,7 @@
     <Compile Include="Assets\Scripts\TurrentTracking.cs" />
     <Compile Include="Assets\Scripts\WallCanvasUpdate.cs" />
     <Compile Include="Assets\Scripts\WinScript.cs" />
+    <Compile Include="Assets\TargetPositionScript.cs" />
     <Reference Include="Unity.Timeline.Editor">
       <HintPath>C:/Users/natha/Documents/GitHub/SeaDogs/Proof of Concept_0.1.5/Library/ScriptAssemblies/Unity.Timeline.Editor.dll</HintPath>
     </Reference>
