Adjusted melee snap to use continuous force, added portals to temple whitebox, added melee targets in temple whitebox, baked lighting in white boxes.

--- a/Proof of Concept_0.1.5/Assembly-CSharp.csproj
+++ b/Proof of Concept_0.1.5/Assembly-CSharp.csproj
@@ -64,6 +64,7 @@
   <ItemGroup>
     <Compile Include="Assets\CoinScript.cs" />
     <Compile Include="Assets\FPS.cs" />
+    <Compile Include="Assets\MeleeDetection.cs" />
     <Compile Include="Assets\PortalToHubScript.cs" />
     <Compile Include="Assets\Scripts\BaseProjectile.cs" />
     <Compile Include="Assets\Scripts\BreakableBoxScript.cs" />
