Completed Jungle Level White Box

--- a/Proof of Concept_0.1.5/Assembly-CSharp.csproj
+++ b/Proof of Concept_0.1.5/Assembly-CSharp.csproj
@@ -70,6 +70,7 @@
      <Compile Include="Assets\Scripts\MainMenu.cs" />
      <Compile Include="Assets\Scripts\MovingPlatformScript.cs" />
      <Compile Include="Assets\Scripts\NormalProjectile.cs" />
+     <Compile Include="Assets\Scripts\OptionsMenu.cs" />
      <Compile Include="Assets\Scripts\PauseMenu.cs" />
      <Compile Include="Assets\Scripts\PortalManager.cs" />
      <Compile Include="Assets\Scripts\PortalToLevelScript.cs" />
