--- a/Proof of Concept_0.1.5/Assembly-CSharp.csproj
+++ b/Proof of Concept_0.1.5/Assembly-CSharp.csproj
@@ -109,25 +109,25 @@
     <None Include="Assets\NavMeshComponents-2019.1\ProjectSettings\ProjectVersion.txt" />
     <None Include="Assets\Water_VFX\Shaders\Water_Shader.shader" />
     <Reference Include="Unity.Timeline.Editor">
-      <HintPath>C:/Users/ra691244/Documents/GitHub/SeaDogs/Proof of Concept_0.1.5/Library/ScriptAssemblies/Unity.Timeline.Editor.dll</HintPath>
+      <HintPath>C:/Users/iv344828.NET/Desktop/SeaDogs/Proof of Concept_0.1.5/Library/ScriptAssemblies/Unity.Timeline.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.TextMeshPro.Editor">
-      <HintPath>C:/Users/ra691244/Documents/GitHub/SeaDogs/Proof of Concept_0.1.5/Library/ScriptAssemblies/Unity.TextMeshPro.Editor.dll</HintPath>
+      <HintPath>C:/Users/iv344828.NET/Desktop/SeaDogs/Proof of Concept_0.1.5/Library/ScriptAssemblies/Unity.TextMeshPro.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.PackageManagerUI.Editor">
-      <HintPath>C:/Users/ra691244/Documents/GitHub/SeaDogs/Proof of Concept_0.1.5/Library/ScriptAssemblies/Unity.PackageManagerUI.Editor.dll</HintPath>
+      <HintPath>C:/Users/iv344828.NET/Desktop/SeaDogs/Proof of Concept_0.1.5/Library/ScriptAssemblies/Unity.PackageManagerUI.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Timeline">
-      <HintPath>C:/Users/ra691244/Documents/GitHub/SeaDogs/Proof of Concept_0.1.5/Library/ScriptAssemblies/Unity.Timeline.dll</HintPath>
+      <HintPath>C:/Users/iv344828.NET/Desktop/SeaDogs/Proof of Concept_0.1.5/Library/ScriptAssemblies/Unity.Timeline.dll</HintPath>
     </Reference>
     <Reference Include="Unity.CollabProxy.Editor">
-      <HintPath>C:/Users/ra691244/Documents/GitHub/SeaDogs/Proof of Concept_0.1.5/Library/ScriptAssemblies/Unity.CollabProxy.Editor.dll</HintPath>
+      <HintPath>C:/Users/iv344828.NET/Desktop/SeaDogs/Proof of Concept_0.1.5/Library/ScriptAssemblies/Unity.CollabProxy.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.TextMeshPro">
-      <HintPath>C:/Users/ra691244/Documents/GitHub/SeaDogs/Proof of Concept_0.1.5/Library/ScriptAssemblies/Unity.TextMeshPro.dll</HintPath>
+      <HintPath>C:/Users/iv344828.NET/Desktop/SeaDogs/Proof of Concept_0.1.5/Library/ScriptAssemblies/Unity.TextMeshPro.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Analytics.DataPrivacy">
-      <HintPath>C:/Users/ra691244/Documents/GitHub/SeaDogs/Proof of Concept_0.1.5/Library/ScriptAssemblies/Unity.Analytics.DataPrivacy.dll</HintPath>
+      <HintPath>C:/Users/iv344828.NET/Desktop/SeaDogs/Proof of Concept_0.1.5/Library/ScriptAssemblies/Unity.Analytics.DataPrivacy.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine.AIModule">
       <HintPath>C:/Program Files/Unity 2019.1.3f1/Editor/Data/Managed/UnityEngine/UnityEngine.AIModule.dll</HintPath>
@@ -312,17 +312,14 @@
     <Reference Include="nunit.framework">
       <HintPath>C:/Program Files/Unity 2019.1.3f1/Editor/Data/UnityExtensions/Unity/TestRunner/net35/unity-custom/nunit.framework.dll</HintPath>
     </Reference>
-    <Reference Include="Vuforia.UnityExtensions">
-      <HintPath>C:/Program Files/Unity 2019.1.3f1/Editor/Data/PlaybackEngines/VuforiaSupport/Managed/Runtime/Vuforia.UnityExtensions.dll</HintPath>
-    </Reference>
     <Reference Include="Unity.Analytics.Editor">
-      <HintPath>C:/Users/ra691244/Documents/GitHub/SeaDogs/Proof of Concept_0.1.5/Library/PackageCache/com.unity.analytics@3.3.2/Unity.Analytics.Editor.dll</HintPath>
+      <HintPath>C:/Users/iv344828.NET/Desktop/SeaDogs/Proof of Concept_0.1.5/Library/PackageCache/com.unity.analytics@3.3.2/Unity.Analytics.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Analytics.StandardEvents">
-      <HintPath>C:/Users/ra691244/Documents/GitHub/SeaDogs/Proof of Concept_0.1.5/Library/PackageCache/com.unity.analytics@3.3.2/Unity.Analytics.StandardEvents.dll</HintPath>
+      <HintPath>C:/Users/iv344828.NET/Desktop/SeaDogs/Proof of Concept_0.1.5/Library/PackageCache/com.unity.analytics@3.3.2/Unity.Analytics.StandardEvents.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Analytics.Tracker">
-      <HintPath>C:/Users/ra691244/Documents/GitHub/SeaDogs/Proof of Concept_0.1.5/Library/PackageCache/com.unity.analytics@3.3.2/Unity.Analytics.Tracker.dll</HintPath>
+      <HintPath>C:/Users/iv344828.NET/Desktop/SeaDogs/Proof of Concept_0.1.5/Library/PackageCache/com.unity.analytics@3.3.2/Unity.Analytics.Tracker.dll</HintPath>
     </Reference>
     <Reference Include="netstandard">
       <HintPath>C:/Program Files/Unity 2019.1.3f1/Editor/Data/NetStandard/ref/2.0.0/netstandard.dll</HintPath>
