Characters wont snap to floor upon switching characters, if switching from the top of a tree.

--- a/Proof of Concept_0.1.5/Assembly-CSharp.csproj
+++ b/Proof of Concept_0.1.5/Assembly-CSharp.csproj
@@ -199,6 +199,7 @@
     <Compile Include="Assets\Scripts\MeleeVFXController.cs" />
     <Compile Include="Assets\Scripts\MovingPlatformScript.cs" />
     <Compile Include="Assets\Scripts\NormalProjectile.cs" />
+    <Compile Include="Assets\Scripts\OnPlatformOrTree.cs" />
     <Compile Include="Assets\Scripts\OptionsMenu.cs" />
     <Compile Include="Assets\Scripts\PauseGameSounds.cs" />
     <Compile Include="Assets\Scripts\PauseMenu.cs" />
